# convconst

./: README.md  flake.nix  pyproject.toml
convconst/: __main__.py  convconst.py
